--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,42 @@
+# name: Deploy to Deta
+# on: push
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2 #Be sure you check-out the repo first. Deta CLI needs access to the files
+#       - uses: BogDAAAMN/deta-deploy-action@v1.0.1
+#         with:
+#           deta-access-token: ${{ secrets.DETA_TOKEN }} #Deta access token https://docs.deta.sh/docs/cli/auth
+#           deta-name: 'node-be1' #Deta Micro name https://docs.deta.sh/docs/cli/commands/#deta-clone
+#           #deta-project: 'node-be' #Optional: Deta project name https://docs.deta.sh/docs/cli/commands/#deta-clone
+#           #deta-project-dir: '.' #Optional: directory to be deployed on Deta. Default is the root "." 
 name: Deploy to Deta
-on: push
+
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2 #Be sure you check-out the repo first. Deta CLI needs access to the files
-      - uses: BogDAAAMN/deta-deploy-action@v1.0.1
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Deploy to Deta
+        uses: deta/actions/cli@v0.4.0
         with:
-          deta-access-token: ${{ secrets.DETA_TOKEN }} #Deta access token https://docs.deta.sh/docs/cli/auth
-          deta-name: 'node-be1' #Deta Micro name https://docs.deta.sh/docs/cli/commands/#deta-clone
-          #deta-project: 'node-be' #Optional: Deta project name https://docs.deta.sh/docs/cli/commands/#deta-clone
-          #deta-project-dir: '.' #Optional: directory to be deployed on Deta. Default is the root "." 
+          command: deploy
+          args: |
+            --name node-be1
+            --prod
+            --local .
+          env:
+            DETA_PROJECT_KEY: ${{ secrets.DETA_TOKEN }}
