--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,34 @@
 #           deta-name: 'node-be1' #Deta Micro name https://docs.deta.sh/docs/cli/commands/#deta-clone
 #           #deta-project: 'node-be' #Optional: Deta project name https://docs.deta.sh/docs/cli/commands/#deta-clone
 #           #deta-project-dir: '.' #Optional: directory to be deployed on Deta. Default is the root "." 
+# name: Deploy to Deta
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Install dependencies
+#         run: npm install
+
+#       - name: Deploy to Deta
+#         uses: deta/actions/cli@v0.4.0
+#         with:
+#           command: deploy
+#           args: |
+#             --name node-be1
+#             --prod
+#             --local .
+#           env:
+#             DETA_PROJECT_KEY: ${{ secrets.DETA_TOKEN }}
 name: Deploy to Deta
 
 on:
@@ -35,8 +63,10 @@ jobs:
         with:
           command: deploy
           args: |
-            --name node-be1
+            --name your-project-name
             --prod
             --local .
-          env:
-            DETA_PROJECT_KEY: ${{ secrets.DETA_TOKEN }}
+        env:
+          DETA_CLI_IGNORE_NO_LOGIN: "true"
+          DETA_PROJECT_KEY: ${{ secrets.DETA_PROJECT_KEY }}
+
