--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
-# name: Deploy to Deta
-# on: push
+name: Deploy to Deta
+on: push
 
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2 #Be sure you check-out the repo first. Deta CLI needs access to the files
-#       - uses: BogDAAAMN/deta-deploy-action@v1.0.1
-#         with:
-#           deta-access-token: ${{ secrets.DETA_TOKEN }} #Deta access token https://docs.deta.sh/docs/cli/auth
-#           deta-name: 'node-be1' #Deta Micro name https://docs.deta.sh/docs/cli/commands/#deta-clone
-#           #deta-project: 'node-be' #Optional: Deta project name https://docs.deta.sh/docs/cli/commands/#deta-clone
-#           #deta-project-dir: '.' #Optional: directory to be deployed on Deta. Default is the root "." 
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2 #Be sure you check-out the repo first. Deta CLI needs access to the files
+      - uses: devbijay/gh-deta-deploy@1.1 #BogDAAAMN/deta-deploy-action@v1.0.1
+        with:
+          deta-access-token: ${{ secrets.DETA_TOKEN }} #Deta access token https://docs.deta.sh/docs/cli/auth
+          deta-name: 'node-be1' #Deta Micro name https://docs.deta.sh/docs/cli/commands/#deta-clone
+          #deta-project: 'node-be' #Optional: Deta project name https://docs.deta.sh/docs/cli/commands/#deta-clone
+          #deta-project-dir: '.' #Optional: directory to be deployed on Deta. Default is the root "." 
 # name: Deploy to Deta
 
 # on:
@@ -40,33 +40,4 @@
 #             --local .
 #           env:
 #             DETA_PROJECT_KEY: ${{ secrets.DETA_TOKEN }}
-name: Deploy to Deta
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Deploy to Deta
-        uses: deta/actions/cli@v0.4.0
-        with:
-          command: deploy
-          args: |
-            --name your-project-name
-            --prod
-            --local .
-        env:
-          DETA_CLI_IGNORE_NO_LOGIN: "true"
-          DETA_PROJECT_KEY: ${{ secrets.DETA_PROJECT_KEY }}
 
