--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v2 #Be sure you check-out the repo first. Deta CLI needs access to the files
       - uses: devbijay/gh-deta-deploy@1.1 #BogDAAAMN/deta-deploy-action@v1.0.1
         with:
-          deta-access-token: ${{ secrets.DETA_TOKEN }} #Deta access token https://docs.deta.sh/docs/cli/auth
+          deta-access-token: ${{ secrets.DETA_ACCESS_TOKEN }} #Deta access token https://docs.deta.sh/docs/cli/auth
           deta-name: 'node-be1' #Deta Micro name https://docs.deta.sh/docs/cli/commands/#deta-clone
           #deta-project: 'node-be' #Optional: Deta project name https://docs.deta.sh/docs/cli/commands/#deta-clone
           #deta-project-dir: '.' #Optional: directory to be deployed on Deta. Default is the root "." 
