--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,31 @@
-name: Deploy to Deta
-on: push
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2 #Be sure you check-out the repo first. Deta CLI needs access to the files
-      - uses: devbijay/gh-deta-deploy@1.1 #BogDAAAMN/deta-deploy-action@v1.0.1
-        with:
-          deta-access-token: ${{ secrets.DETA_ACCESS_TOKEN }} #Deta access token https://docs.deta.sh/docs/cli/auth
-          deta-name: 'node-be1' #Deta Micro name https://docs.deta.sh/docs/cli/commands/#deta-clone
-          #deta-project: 'node-be' #Optional: Deta project name https://docs.deta.sh/docs/cli/commands/#deta-clone
-          #deta-project-dir: '.' #Optional: directory to be deployed on Deta. Default is the root "." 
 # name: Deploy to Deta
-
-# on:
-#   push:
-#     branches:
-#       - main
+# on: push
 
 # jobs:
 #   deploy:
 #     runs-on: ubuntu-latest
-
 #     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-
-#       - name: Install dependencies
-#         run: npm install
-
-#       - name: Deploy to Deta
-#         uses: deta/actions/cli@v0.4.0
+#       - uses: actions/checkout@v2 #Be sure you check-out the repo first. Deta CLI needs access to the files
+#       - uses: devbijay/gh-deta-deploy@1.1 #BogDAAAMN/deta-deploy-action@v1.0.1
 #         with:
-#           command: deploy
-#           args: |
-#             --name node-be1
-#             --prod
-#             --local .
-#           env:
-#             DETA_PROJECT_KEY: ${{ secrets.DETA_TOKEN }}
+#           deta-access-token: ${{ secrets.DETA_ACCESS_TOKEN }} #Deta access token https://docs.deta.sh/docs/cli/auth
+#           deta-name: 'node-be1' #Deta Micro name https://docs.deta.sh/docs/cli/commands/#deta-clone
+#           deta-project: 'node-be' #Optional: Deta project name https://docs.deta.sh/docs/cli/commands/#deta-clone
+#           deta-project-dir: '.' #Optional: directory to be deployed on Deta. Default is the root "." 
+name: Push to Space
+on: push
+
+jobs:
+  push-to-space:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deta Space Deployment Github Action
+        uses: neobrains/space-deployment-github-action@v0.3
+        with:
+          access_token: ${{ secrets.ACCESS_TOKEN }}
+          project_id: ${{ secrets.PROJECT_ID }}
+          space_push: true
+          list_on_discovery: true
+
 
