--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,17 +6,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # - name: Use NodeJS 16.X
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: 16.17.x
-      #     cache: 'npm'
-      #     cache-dependency-path: package-lock.json
-      # - name: Install
-      #   run: npm install
-      # - name: Build
-      #   run: |
-      #     npm run build
+      - name: Use NodeJS 16.X
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.17.x
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
+      - name: Install
+        run: npm install
+      - name: Build
+        run: |
+          npm run build
       - name: Deta Space Deployment Github Action
         uses: neobrains/space-deployment-github-action@v0.3
         with:
