--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": "16.17.0"
   },
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon --esm ./src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,6 +30,8 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
 }
